[package]
name = "liftbridge-rs"
version = "0.1.0"
authors = ["Roman Useinov <roman.useinov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3.0"
prost = "0.6.1"
thiserror = "1.0.20"
anyhow = "1.0.31"
chrono = "0.4.13"
# TODO: Remove before merging the WIP branch.
actix-rt = "1.1.1"

[build-dependencies]
tonic-build = "0.3.0"
